plugins {
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.5'
    id 'application'
}
repositories { mavenCentral() }
java { toolchain { languageVersion = JavaLanguageVersion.of(22) } }
dependencies {
    implementation 'io.github.deemwario:mochallama-spring-boot-starter:0.1.5'
    runtimeOnly 'io.github.deemwario:mochallama-core-platform:0.1.5'
    implementation 'org.springframework.boot:spring-boot-starter-web'
}
application { mainClass = 'demo.App' }
bootRun {
    jvmArgs = ['--enable-native-access=ALL-UNNAMED', '--add-modules=jdk.incubator.vector']
}
